# fusionmatdb

./: .gitignore  README.md  pyproject.toml
dataset/: load_example.py  reproduce.py
docs/superpowers/plans/: 2026-04-17-data-quality-provenance.md
docs/superpowers/specs/: 2026-04-17-data-quality-provenance-design.md
fusionmatdb/: cli.py
fusionmatdb/access/: text_extractor.py  vision_extractor.py
fusionmatdb/discovery/: ornl_reports.py
fusionmatdb/extraction/: llm_extractor.py  page_triage.py  prompts.py  validator.py
fusionmatdb/ingestion/: matdb4fusion.py  sdc_ic.py
fusionmatdb/knowledge/: __init__.py
fusionmatdb/normalisation/: material_normaliser.py
fusionmatdb/qa/: __init__.py  accuracy_benchmark.py  benchmark_worksheet.py  cross_db_validator.py  dedup_detector.py  fraud_detector.py  qa_report.py  review_queue.py
fusionmatdb/reporting/: __init__.py  quality_report.py
fusionmatdb/scripts/: backfill_quality.py
fusionmatdb/storage/: database.py  exporter.py  schema.py
fusionmatdb/trust/: __init__.py  lineage.py  trust_score.py
scripts/: sample_extraction_run.py
tests/: test_backfill.py  test_benchmark_worksheet.py  test_cross_db_validator.py  test_cross_page_context.py  test_database.py  test_dedup.py  test_exporter.py  test_extractor.py  test_fraud_detector.py  test_lineage.py  test_matdb4fusion.py  test_normaliser.py  test_ornl_downloader.py  test_page_triage.py  test_quality_report.py  test_review_queue.py  test_schema.py  test_schema_quality.py  test_sdc_ic.py  test_text_extractor.py  test_trust_score.py  test_validator_enhanced.py
