[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fusionmatdb"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "pdfplumber>=0.11.9,<1.0",
    "anthropic>=0.40",
    "pyalex>=0.14",
    "semanticscholar>=0.8",
    "unpywall>=0.2",
    "requests>=2.31",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "click>=8.1",
    "pydantic>=2.0",
    "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["fusionmatdb*"]

[project.scripts]
fusionmatdb = "fusionmatdb.cli:main"
